<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9000000"
    tools:context=".photo.PhotoEditActivity">

    <ImageButton
        android:id="@+id/paint_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/draw_on_image"
        android:onClick="onPhotoEditClick"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/undo">

    </ja.burhanrashid52.photoeditor.PhotoEditorView>

    <com.rtugeek.android.colorseekbar.ColorSeekBar
        android:id="@+id/colorSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:barHeight="5dp"
        app:colorSeeds="@array/material_colors"
        app:isVertical="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:showAlphaBar="false"
        app:thumbHeight="30dp" />


    <TextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="68dp"
        android:background="?attr/selectableItemBackground"
        android:onClick="onPhotoEditClick"
        android:text="@string/filters"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paint_mode_button" />

    <TextView
        android:id="@+id/text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="68dp"
        android:background="?attr/selectableItemBackground"
        android:onClick="onPhotoEditClick"
        android:text="@string/text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filters" />


    <!-- Filters window -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/add_text"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/photoEditorView"
        app:layout_constraintEnd_toStartOf="@+id/enter_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/filters_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/bw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/filter_none"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/sepia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/filter_sepia"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/saturate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/filter_saturate"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/sharpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/filter_sharpen"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/fish_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/filter_fish_eye"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/undo"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toTopOf="@+id/photoEditorView"
        app:layout_constraintEnd_toStartOf="@+id/redo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/redo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/redo"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_rotate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/finish_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/quantum_ic_arrow_back_grey600_24"
        android:contentDescription="@string/finish_edit" />


    <EditText
        android:id="@+id/enter_text"
        android:layout_width="256dp"
        android:layout_height="44dp"
        android:layout_marginBottom="3dp"
        android:hint="@string/enter_your_text"
        android:inputType="textShortMessage"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/photoEditorView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_text"
        tools:layout_editor_absoluteX="59dp"
        android:autofillHints="" />


    <TextView
        android:id="@+id/emojis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="68dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/emojis"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_button" />

    <ScrollView
        android:id="@+id/emoji_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:visibility="invisible">

        <TableLayout
            android:id="@+id/emoji_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>