...
    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/camera_capture_button"
        android:layout_width="@dimen/shutter_button_size"
        android:layout_height="@dimen/shutter_button_size"
        android:layout_marginBottom="@dimen/shutter_button_margin"
        android:background="@drawable/ic_shutter"
        android:contentDescription="@string/take_photo"
        android:scaleType="fitCenter"
...
