...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crop_mode_button"
        android:contentDescription="@string/image" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/effects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:focusable="true"
...
