<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9000000"
    tools:context=".photo.PhotoEditorActivity">

    <ImageButton
        android:id="@+id/paint_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="Draw on image"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.rtugeek.android.colorseekbar.ColorSeekBar
        android:id="@+id/colorSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:barHeight="5dp"
        app:colorSeeds="@array/material_colors"
        app:isVertical="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:showAlphaBar="false"
        app:thumbHeight="30dp" />


    <TextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="68dp"
        android:background="?attr/selectableItemBackground"
        android:text="Filters"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paint_mode_button" />

    <!-- Filters window -->
    <LinearLayout
        android:id="@+id/filters_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/bw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="None"
            android:layout_margin="8dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/sepia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="Sepia"
            android:layout_margin="8dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/saturate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="Saturate"
            android:layout_margin="8dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/sharpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="Sharpen"
            android:layout_margin="8dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/fish_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="Fish Eye"
            android:layout_margin="8dp"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/crop_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="68dp"
        android:background="?attr/selectableItemBackground"
        android:text="Crop"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filters" />

    <!-- Cropper window -->
    <RelativeLayout
        android:id="@+id/crop_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/crop_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:background="?attr/selectableItemBackground"
            android:text="Crop"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

    <TextView
        android:id="@+id/emojis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="68dp"
        android:background="?attr/selectableItemBackground"
        android:text="Emojis"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/crop_mode_button" />

    <ScrollView
        android:id="@+id/emoji_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:visibility="invisible">

        <TableLayout
            android:id="@+id/emoji_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </ScrollView>

    <!-- Preview window -->
    <RelativeLayout
        android:id="@+id/preview_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D9000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart" />


        <TextView
            android:id="@+id/hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:text="Hide preview"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <TextView
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:text="Show preview"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="Undo"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintEnd_toStartOf="@+id/redo"
        app:layout_constraintTop_toBottomOf="@+id/show" />

    <ImageButton
        android:id="@+id/redo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="Redo"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_rotate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show" />

</androidx.constraintlayout.widget.ConstraintLayout>